# fraud-detection

./: .gitignore  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: chargeback.yaml  known_bad_devices.txt  velocity.yaml
feature_repo/: __init__.py  entities.py  feature_store.yaml  feature_views.py  features.py
migrations/: 001_init.sql  001_initial_schema.sql
src/fraud_detection/: app.py  audit.py  config.py  connections.py  db.py  feature_store.py  migrate.py  registry.py  replay.py  scoring.py  tracing.py
src/fraud_detection/consumers/: kafka.py
src/fraud_detection/features/: backfill.py  engineering.py
src/fraud_detection/models/: routing.py  schemas.py
src/fraud_detection/observability/: drift.py  monitoring.py
src/fraud_detection/training/: scheduler.py  train_chargeback.py  train_velocity.py
tests/: test_api.py  test_audit.py  test_audit_envelope.py  test_backfill.py  test_config_env.py  test_consumer.py  test_db.py  test_drift.py  test_drift_db.py  test_extras.py  test_feature_repo.py  test_feature_store.py  test_features.py  test_health.py  test_model_loader.py  test_prod_guard.py  test_redis_store.py  test_registry_config.py  test_replay.py  test_routing.py  test_schema.py  test_scoring.py  test_training.py
